[package]
name = "tree-grepper"
version = "2.5.0-pre"
authors = ["Brian Hicks <brian@brianthicks.com>"]
edition = "2021"

[dependencies]
anyhow = "1.0.58"
bump_alloc = "0.1.0"
clap = { version = "3.2.11", features = [ "std", "color", "suggestions", "cargo" ] }
crossbeam = "0.8.1"
ignore = "0.4.18"
itertools = "0.10.3"
rayon = "1.5.3"
serde = { version = "1.0.139", features = [ "derive" ] }
serde_json = "1.0.82"
tree-sitter = "0.20"
paste = "1.0.7"
bat = "0.24"
libloading = "0.8"

[dev-dependencies]
insta = "1.15.0"
